[package]
name = "minijudge-rust-listener"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { git = "https://github.com/clap-rs/clap/" }